--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
 <title>Plamen Mollov – Преводи от и на гръцки език</title>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;600&amp;display=swap" rel="stylesheet"/>
-<style>/* GDPR checkbox styling */
+<style>
+    
+/* GDPR checkbox styling */
 .gdpr-label {
   display: flex;
   align-items: center;
@@ -79,19 +81,16 @@ body {
   background-image: url('assets/images/bg-greece.webp');
   background-size: contain;
   background-repeat: no-repeat;
-  background-position: center center;
+  background-position: center;
   background-color: white;
   width: 100%;
+  aspect-ratio: 16 / 4;
   overflow: hidden;
-  min-height: 300px;
-  min-height: 320px;
 }
     
     .hero h1, .hero p {
       position: relative;
       z-index: 1;
-  min-height: 300px;
-  min-height: 320px;
     }
     section {
       padding: 2rem;
@@ -177,15 +176,16 @@ button:hover::after {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   animation: fade-float 4s ease-in-out infinite;
   opacity: 0;
-  min-height: 300px;
-  min-height: 320px;
 }
 @keyframes fade-float {
   0%   { transform: translateY(0px); opacity: 0; }
   50%  { transform: translateY(-5px); opacity: 1; }
   100% { transform: translateY(-10px); opacity: 0; }
-}</style>
-<style>.menu-toggle {
+}
+
+</style>
+<style>
+  .menu-toggle {
     display: none;
     flex-direction: column;
     cursor: pointer;
@@ -221,6 +221,7 @@ button:hover::after {
     }
   }
 
+.hero-letter {
   position: absolute;
   font-size: 2.2rem;
   font-weight: bold;
@@ -229,10 +230,22 @@ button:hover::after {
   animation: fade-float 4s ease-in-out infinite;
   opacity: 0;
 }
+@keyframes fade-float {
   0%   { transform: translateY(0px); opacity: 0; }
   50%  { transform: translateY(-5px); opacity: 1; }
   100% { transform: translateY(-10px); opacity: 0; }
-}</style>
+}
+
+</style>
+<script>
+  document.addEventListener("DOMContentLoaded", function() {
+    const nav = document.querySelector("nav");
+    const toggle = document.querySelector(".menu-toggle");
+    toggle.addEventListener("click", () => {
+      nav.classList.toggle("active");
+    });
+  });
+</script>
 <meta content="Заклет преводач с гръцки език, устни и писмени преводи, имоти в Гърция, легализация, консултации при покупка на имот." name="description"/><meta content="заклет преводач гръцки език, устни преводи гръцки, писмени преводи, имоти в Гърция, покупко-продажба на имоти, легализация, Ακίνητα στην Ελλάδα, μεταφράσεις ελληνικά, заверки на документи, апостил, апостил на документи, устни и писмени преводи с гръцки език, легализация на документи" name="keywords"/><meta content="Пламен Моллов" name="author"/><link href="https://www.prevodigr.eu" rel="canonical"/><script type="application/ld+json">
 {
   "@context": "https://schema.org",
@@ -255,7 +268,7 @@ button:hover::after {
     "availableLanguage": ["Bulgarian", "Greek"]
   }
 }
-</script><link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet"/></head>
+</script></head>
 <body>
 <header>
 <img alt="Plamen Mollov Logo" src="assets/images/logo.webp"/>
@@ -278,44 +291,44 @@ button:hover::after {
 </div>
 </nav>
 <div class="hero">
-<span alt="" aria-hidden="true" class="hero-letter" style="top: 77%; left: 69%; animation-delay: 1.43s;">Χ</span>
-<span alt="" aria-hidden="true" class="hero-letter" style="top: 9%; left: 47%; animation-delay: 2.79s;">Κ</span>
-<span alt="" aria-hidden="true" class="hero-letter" style="top: 19%; left: 63%; animation-delay: 4.21s;">Υ</span>
-<span alt="" aria-hidden="true" class="hero-letter" style="top: 81%; left: 49%; animation-delay: 1.94s;">π</span>
-<span alt="" aria-hidden="true" class="hero-letter" style="top: 83%; left: 82%; animation-delay: 4.26s;">φ</span>
-<span alt="" aria-hidden="true" class="hero-letter" style="top: 74%; left: 30%; animation-delay: 1.89s;">Α</span>
-<span alt="" aria-hidden="true" class="hero-letter" style="top: 12%; left: 12%; animation-delay: 6.02s;">Ι</span>
-<span alt="" aria-hidden="true" class="hero-letter" style="top: 66%; left: 14%; animation-delay: 5.97s;">λ</span>
-<span alt="" aria-hidden="true" class="hero-letter" style="top: 30%; left: 73%; animation-delay: 0.33s;">Β</span>
-<span alt="" aria-hidden="true" class="hero-letter" style="top: 37%; left: 6%; animation-delay: 1.8s;">Η</span>
-<span alt="" aria-hidden="true" class="hero-letter" style="top: 44%; left: 25%; animation-delay: 5.53s;">ρ</span>
-<span alt="" aria-hidden="true" class="hero-letter" style="top: 36%; left: 85%; animation-delay: 0.46s;">Σ</span>
-<span alt="" aria-hidden="true" class="hero-letter" style="top: 61%; left: 40%; animation-delay: 3.07s;">Ζ</span>
-<span alt="" aria-hidden="true" class="hero-letter" style="top: 16%; left: 37%; animation-delay: 2.6s;">ξ</span>
-<span alt="" aria-hidden="true" class="hero-letter" style="top: 36%; left: 60%; animation-delay: 1.07s;">Ε</span>
-<span alt="" aria-hidden="true" class="hero-letter" style="top: 56%; left: 88%; animation-delay: 5.84s;">ς</span>
-<span alt="" aria-hidden="true" class="hero-letter" style="top: 88%; left: 63%; animation-delay: 0.57s;">Ο</span>
-<span alt="" aria-hidden="true" class="hero-letter" style="top: 83%; left: 4%; animation-delay: 5.01s;">Ν</span>
-<span alt="" aria-hidden="true" class="hero-letter" style="top: 13%; left: 5%; animation-delay: 4.62s;">Τ</span>
-<span alt="" aria-hidden="true" class="hero-letter" style="top: 40%; left: 50%; animation-delay: 0.12s;">Γ</span>
-<span alt="" aria-hidden="true" class="hero-letter" style="top: 7%; left: 71%; animation-delay: 3.58s;">Π</span>
-<span alt="" aria-hidden="true" class="hero-letter" style="top: 44%; left: 16%; animation-delay: 5.36s;">Μ</span>
-<span alt="" aria-hidden="true" class="hero-letter" style="top: 20%; left: 27%; animation-delay: 0.94s;">ψ</span>
-<span alt="" aria-hidden="true" class="hero-letter" style="top: 27%; left: 96%; animation-delay: 3.84s;">Ξ</span>
-<span alt="" aria-hidden="true" class="hero-letter" style="top: 90%; left: 26%; animation-delay: 5.92s;">Λ</span>
-<span alt="" aria-hidden="true" class="hero-letter" style="top: 5%; left: 20%; animation-delay: 5.43s;">Φ</span>
-<span alt="" aria-hidden="true" class="hero-letter" style="top: 70%; left: 46%; animation-delay: 4.13s;">Ρ</span>
-<span alt="" aria-hidden="true" class="hero-letter" style="top: 72%; left: 55%; animation-delay: 2.13s;">β</span>
-<span alt="" aria-hidden="true" class="hero-letter" style="top: 6%; left: 77%; animation-delay: 2.04s;">Ψ</span>
-<span alt="" aria-hidden="true" class="hero-letter" style="top: 76%; left: 98%; animation-delay: 2.04s;">Θ</span>
-<span alt="" aria-hidden="true" class="hero-letter" style="top: 30%; left: 42%; animation-delay: 5.04s;">η</span>
-<span alt="" aria-hidden="true" class="hero-letter" style="top: 5%; left: 89%; animation-delay: 0.94s;">Ω</span></div>
+<span class="hero-letter" style="top: 77%; left: 69%; animation-delay: 1.43s;">Χ</span>
+<span class="hero-letter" style="top: 9%; left: 47%; animation-delay: 2.79s;">Κ</span>
+<span class="hero-letter" style="top: 19%; left: 63%; animation-delay: 4.21s;">Υ</span>
+<span class="hero-letter" style="top: 81%; left: 49%; animation-delay: 1.94s;">π</span>
+<span class="hero-letter" style="top: 83%; left: 82%; animation-delay: 4.26s;">φ</span>
+<span class="hero-letter" style="top: 74%; left: 30%; animation-delay: 1.89s;">Α</span>
+<span class="hero-letter" style="top: 12%; left: 12%; animation-delay: 6.02s;">Ι</span>
+<span class="hero-letter" style="top: 66%; left: 14%; animation-delay: 5.97s;">λ</span>
+<span class="hero-letter" style="top: 30%; left: 73%; animation-delay: 0.33s;">Β</span>
+<span class="hero-letter" style="top: 37%; left: 6%; animation-delay: 1.8s;">Η</span>
+<span class="hero-letter" style="top: 44%; left: 25%; animation-delay: 5.53s;">ρ</span>
+<span class="hero-letter" style="top: 36%; left: 85%; animation-delay: 0.46s;">Σ</span>
+<span class="hero-letter" style="top: 61%; left: 40%; animation-delay: 3.07s;">Ζ</span>
+<span class="hero-letter" style="top: 16%; left: 37%; animation-delay: 2.6s;">ξ</span>
+<span class="hero-letter" style="top: 36%; left: 60%; animation-delay: 1.07s;">Ε</span>
+<span class="hero-letter" style="top: 56%; left: 88%; animation-delay: 5.84s;">ς</span>
+<span class="hero-letter" style="top: 88%; left: 63%; animation-delay: 0.57s;">Ο</span>
+<span class="hero-letter" style="top: 83%; left: 4%; animation-delay: 5.01s;">Ν</span>
+<span class="hero-letter" style="top: 13%; left: 5%; animation-delay: 4.62s;">Τ</span>
+<span class="hero-letter" style="top: 40%; left: 50%; animation-delay: 0.12s;">Γ</span>
+<span class="hero-letter" style="top: 7%; left: 71%; animation-delay: 3.58s;">Π</span>
+<span class="hero-letter" style="top: 44%; left: 16%; animation-delay: 5.36s;">Μ</span>
+<span class="hero-letter" style="top: 20%; left: 27%; animation-delay: 0.94s;">ψ</span>
+<span class="hero-letter" style="top: 27%; left: 96%; animation-delay: 3.84s;">Ξ</span>
+<span class="hero-letter" style="top: 90%; left: 26%; animation-delay: 5.92s;">Λ</span>
+<span class="hero-letter" style="top: 5%; left: 20%; animation-delay: 5.43s;">Φ</span>
+<span class="hero-letter" style="top: 70%; left: 46%; animation-delay: 4.13s;">Ρ</span>
+<span class="hero-letter" style="top: 72%; left: 55%; animation-delay: 2.13s;">β</span>
+<span class="hero-letter" style="top: 6%; left: 77%; animation-delay: 2.04s;">Ψ</span>
+<span class="hero-letter" style="top: 76%; left: 98%; animation-delay: 2.04s;">Θ</span>
+<span class="hero-letter" style="top: 30%; left: 42%; animation-delay: 5.04s;">η</span>
+<span class="hero-letter" style="top: 5%; left: 89%; animation-delay: 0.94s;">Ω</span></div>
 <section id="about">
 <h2 class="section-title">За мен / Σχετικά με εμένα</h2>
 <p style="text-align: justify;">
       Казвам се Пламен Асенов Моллов и съм заклет преводач от и на гръцки език с над 17 години опит. Завършил съм специалност "Български език и новогръцки език" в ПУ „Паисий Хилендарски“ – гр. Пловдив. Участвах в престижни програми като <strong>Сократ – Еразъм</strong> в Солунския университет „Аристотел“, където усъвършенствах знанията си по гръцки език и култура. Моята мисия е да създавам мостове между хората чрез езика, с уважение, точност и вдъхновение.
     </p>
-<p lang="el" style="text-align: justify;">
+<p style="text-align: justify;">
       Το όνομά μου είναι Πλάμεν Ασένοβ Μόλλοβ και είμαι επίσημος μεταφραστής-διερμηνέας από και προς την ελληνική γλώσσα με εμπειρία άνω των 17 ετών. Σπούδασα Βουλγαρική και Νεοελληνική φιλολογία στο Πανεπιστήμιο της Φιλιππούπολης "Παίσιι Χιλεντάρσκι" και συμμετείχα στο πρόγραμμα <strong>Socrates – Erasmus</strong> στο Αριστοτέλειο Πανεπιστήμιο Θεσσαλονίκης, ενισχύοντας τις γλωσσικές και πολιτισμικές μου γνώσεις.Η αποστολή μου είναι να φέρνω κοντά τους ανθρώπους μέσα από τη γλώσσα, με ακρίβεια, σεβασμό και έμπνευση. 
     </p>
 </section>
@@ -331,11 +344,11 @@ button:hover::after {
 <li>🎙️ Παροχή προφορικής διερμηνείας σε επαγγελματικές εκδηλώσεις, επιχειρηματικές συναντήσεις και εκπαιδευτικά σεμινάρια.</li>
 <li>📜 Επίσημες και επικυρωμένες μεταφράσεις εγγράφων για χρήση σε δημόσιες υπηρεσίες και ιδιωτικούς οργανισμούς. Σφραγίδα της Χάγης.</li>
 </ul>
-<p lang="el"><em>Μεταφράσεις που εμπνέουν εμπιστοσύνη, ακρίβεια και σεβασμό στον λόγο.</em></p>
+<p><em>Μεταφράσεις που εμπνέουν εμπιστοσύνη, ακρίβεια και σεβασμό στον λόγο.</em></p>
 </section>
 <section id="real-estate" style="background-color: #f8fcff; padding: 2rem; border-top: 2px solid #ccc; border-radius: 12px;">
 <h2 class="section-title">Недвижими имоти в Гърция / Ακίνητα στην Ελλάδα</h2>
-<p lang="el"><strong>Консултантски услуги и устен превод при имотни сделки в Гърция / Συμβουλευτικές υπηρεσίες και υπηρεσίες διερμηνείας για συναλλαγές ακινήτων στην Ελλάδα</strong></p>
+<p><strong>Консултантски услуги и устен превод при имотни сделки в Гърция / Συμβουλευτικές υπηρεσίες και υπηρεσίες διερμηνείας για συναλλαγές ακινήτων στην Ελλάδα</strong></p>
 <p>При покупка или продажба на недвижими имоти в Гърция е важно да имате доверен партньор, който да ви съдейства с езика, процедурите и културните особености. Предлагам пълно съдействие и устен превод на място, така че да се чувствате спокойни и уверени на всяка стъпка от процеса.</p>
 <ul>
 <li>🏘️ Устен превод при покупко-продажба на недвижими имоти</li>
@@ -344,7 +357,7 @@ button:hover::after {
 <li>🤝 Придружаване до нотариус, адвокат, счетоводител, агенции за недвижими имоти</li>
 <li>📄 Превод и заверка на документи, изисквани от гръцки институции</li>
 </ul>
-<p lang="el">Κατά την αγορά ή πώληση ακινήτου στην Ελλάδα, είναι σημαντικό να έχετε στο πλευρό σας έναν αξιόπιστο συνεργάτη που γνωρίζει τόσο τη γλώσσα όσο και τη διαδικασία. Προσφέρω πλήρη υποστήριξη και προφορική διερμηνεία ώστε να αισθάνεστε ασφάλεια και κατανόηση σε κάθε βήμα.</p>
+<p>Κατά την αγορά ή πώληση ακινήτου στην Ελλάδα, είναι σημαντικό να έχετε στο πλευρό σας έναν αξιόπιστο συνεργάτη που γνωρίζει τόσο τη γλώσσα όσο και τη διαδικασία. Προσφέρω πλήρη υποστήριξη και προφορική διερμηνεία ώστε να αισθάνεστε ασφάλεια και κατανόηση σε κάθε βήμα.</p>
 <ul>
 <li>🏘️ Διερμηνεία σε διαδικασίες αγοραπωλησίας ακινήτων</li>
 <li>📝 Συμβουλές και μετάφραση συμβολαίων και νομικών εγγράφων</li>
@@ -352,13 +365,13 @@ button:hover::after {
 <li>🤝 Συνοδεία σε συμβολαιογράφους, δικηγόρους, λογιστές ή κτηματομεσίτες</li>
 <li>📄 Μετάφραση και επικύρωση απαιτούμενων εγγράφων</li>
 </ul>
-<p lang="el"><strong>📩 Свържете се с мен, за да уговорим индивидуална среща или консултация.<br/>
+<p><strong>📩 Свържете се с мен, за да уговорим индивидуална среща или консултация.<br/>
   📩 Επικοινωνήστε μαζί μου για προσωπικό ραντεβού ή συμβουλή.</strong></p>
-<p lang="el"><strong><a href="https://www.dimokritosrealestate.gr/" rel="noopener noreferrer" target="_blank">Актуални оферти за недвижими имоти в Гърция / Τρέχουσες προσφορές ακινήτων στην Ελλάδα</a></strong></p>
+<p><strong><a href="https://www.dimokritosrealestate.gr/" rel="noopener noreferrer" target="_blank">Актуални оферти за недвижими имоти в Гърция / Τρέχουσες προσφορές ακινήτων στην Ελλάδα</a></strong></p>
 </section>
 <section id="prices">
 <h2 class="section-title">Цени / Τιμές</h2>
-<p lang="el" style="text-align: justify;">
+<p style="text-align: justify;">
 <em>Цените се договарят индивидуално според сложността, обема и сроковете.</em><br/>
 <em>Οι τιμές καθορίζονται μεμονωμένα, ανάλογα με τη δυσκολία του κειμένου, τον όγκο και τα χρονικά περιθώρια παράδοσης.</em>
 </p>
@@ -384,7 +397,7 @@ button:hover::after {
         📩 Попълни формата и вземи своята оферта още днес!<br/>
         📋 Συμπλήρωσε τη φόρμα και ζήτησε την προσφορά σου σήμερα!
       </h3>
-<p lang="el" style="font-size: 1.1rem; color: #222;">💬 Безплатна, бърза и напълно онлайн консултация / Δωρεάν, γρήγορη και πλήρως διαδικτυακή συμβουλευτική</p>
+<p style="font-size: 1.1rem; color: #222;">💬 Безплатна, бърза и напълно онлайн консултация / Δωρεάν, γρήγορη και πλήρως διαδικτυακή συμβουλευτική</p>
 </div>
 <!-- Формата -->
 <iframe height="750" id="offerForm" src="https://forms.fillout.com/t/9NUe5T1CmCus" style="border:none;" title="Форма за оферта" width="100%">
@@ -396,7 +409,8 @@ button:hover::after {
 </div>
 </div>
 </section>
-<style>@keyframes pulseBanner {
+<style>
+@keyframes pulseBanner {
   0% { transform: scale(1); box-shadow: 0 8px 20px rgba(0, 85, 165, 0.15); }
   50% { transform: scale(1.01); box-shadow: 0 10px 24px rgba(0, 85, 165, 0.25); }
   100% { transform: scale(1); box-shadow: 0 8px 20px rgba(0, 85, 165, 0.15); }
@@ -409,7 +423,8 @@ button:hover::after {
   #prices p {
     font-size: 1rem !important;
   }
-}</style>
+}
+</style>
 <section id="testimonials">
 <h2 class="section-title">Мнения на клиенти /  Αξιολογήσεις πελατών</h2>
 <div class="testimonial">
@@ -444,9 +459,10 @@ button:hover::after {
   ">
     🗣️ Споделете вашето мнение / Αφήστε την αξιολόγηση σας
   </h3>
-<p lang="el" style="font-size: 1.1rem; color: #333;">✍️ Вашето мнение има значение – помогнете на други клиенти с вашата оценка! / Η γνώμη σας μετράει – βοηθήστε άλλους πελάτες με την αξιολόγησή σας!</p>
+<p style="font-size: 1.1rem; color: #333;">✍️ Вашето мнение има значение – помогнете на други клиенти с вашата оценка! / Η γνώμη σας μετράει – βοηθήστε άλλους πελάτες με την αξιολόγησή σας!</p>
 </div>
-<style>@keyframes pulseReview {
+<style>
+@keyframes pulseReview {
   0% { transform: scale(1); box-shadow: 0 8px 20px rgba(0, 85, 165, 0.15); }
   50% { transform: scale(1.01); box-shadow: 0 10px 24px rgba(0, 85, 165, 0.25); }
   100% { transform: scale(1); box-shadow: 0 8px 20px rgba(0, 85, 165, 0.15); }
@@ -456,7 +472,8 @@ button:hover::after {
     font-size: 1.4rem !important;
     line-height: 1.4;
   }
-}</style>
+}
+</style>
 <iframe height="600" id="feedbackForm" src="https://forms.fillout.com/t/89sjbQ6ZJ1us" style="border:none;" title="Форма за мнение" width="100%">
 </iframe>
 <div style="margin-top: 1rem; font-size: 0.9rem; text-align: center;">
@@ -468,13 +485,13 @@ button:hover::after {
 </section>
 <section id="contact">
 <h2 class="section-title">Контакти / Επικοινωνίες</h2>
-<p><i class="fa-solid fa-envelope"></i> Email: <a href="mailto:mollovplamen@gmail.com">mollovplamen@gmail.com</a></p>
-<p lang="el"><i class="fa-solid fa-location-dot"></i> Град: Пловдив / πόλη Πλόβντιβ Βουλγαρίας</p>
-<p lang="el"><i class="fa-solid fa-phone"></i> Телефон / Τηλέφωνο: 00359 897 09 89 59</p>
+<p>📧 Email: <a href="mailto:mollovplamen@gmail.com">mollovplamen@gmail.com</a></p>
+<p>📍 Град: Пловдив / πόλη Πλόβντιβ Βουλγαρίας</p>
+<p>📞 Телефон / Τηλέφωνο: 00359 897 09 89 59</p>
 </section>
 <footer>
 <p>© 2025 Пламен Моллов – Заклет преводач с гръцки език</p>
-<p lang="el">🇧🇬 България | Ελλάδα 🇬🇷</p>
+<p>🇧🇬 България | Ελλάδα 🇬🇷</p>
 </footer>
 <script>
   document.addEventListener("DOMContentLoaded", function() {
@@ -504,13 +521,5 @@ window.addEventListener("message", function(event) {
   }
 });
 </script>
-<script>
-document.addEventListener("DOMContentLoaded", function() {
-  const toggle = document.querySelector(".menu-toggle");
-  const links = document.querySelector(".nav-links");
-  toggle.addEventListener("click", () => {
-    links.classList.toggle("active");
-  });
-});
-</script></body>
+</body>
 </html>
