--- a/index.html
+++ b/index.html
@@ -268,19 +268,7 @@ button:hover::after {
     "availableLanguage": ["Bulgarian", "Greek"]
   }
 }
-</script><meta content="Пламен Моллов – Професионални преводи и консултации" property="og:title"/><meta content="Бързи и надеждни преводи, правни и бизнес консултации на български и гръцки език." property="og:description"/><meta content="website" property="og:type"/><meta content="https://www.plamenmollov.com" property="og:url"/><meta content="https://www.plamenmollov.com/assets/images/bg-greece.webp" property="og:image"/><style>
-@media (max-width: 768px) {
-  .nav-links {
-    max-height: 0;
-    overflow: hidden;
-    transition: max-height 0.5s ease-in-out;
-    flex-direction: column;
-  }
-  .nav-links.active {
-    max-height: 400px;
-  }
-}
-</style></head>
+</script></head>
 <body>
 <header>
 <img alt="Plamen Mollov Logo" src="assets/images/logo.webp"/>
