--- a/index.html
+++ b/index.html
@@ -237,38 +237,8 @@ button:hover::after {
 }
 
 </style>
-<script>
-  document.addEventListener("DOMContentLoaded", function() {
-    const nav = document.querySelector("nav");
-    const toggle = document.querySelector(".menu-toggle");
-    toggle.addEventListener("click", () => {
-      nav.classList.toggle("active");
-    });
-  });
-</script>
-<meta content="Заклет преводач с гръцки език, устни и писмени преводи, имоти в Гърция, легализация, консултации при покупка на имот." name="description"/><meta content="заклет преводач гръцки език, устни преводи гръцки, писмени преводи, имоти в Гърция, покупко-продажба на имоти, легализация, Ακίνητα στην Ελλάδα, μεταφράσεις ελληνικά, заверки на документи, апостил, апостил на документи, устни и писмени преводи с гръцки език, легализация на документи" name="keywords"/><meta content="Пламен Моллов" name="author"/><link href="https://www.prevodigr.eu" rel="canonical"/><script type="application/ld+json">
-{
-  "@context": "https://schema.org",
-  "@type": "ProfessionalService",
-  "name": "Пламен Моллов – Заклет преводач от и на гръцки език",
-  "url": "https://www.prevodigr.eu",
-  "logo": "https://www.prevodigr.eu/assets/images/logo.webp",
-  "image": "https://www.prevodigr.eu/assets/images/bg-greece.webp",
-  "description": "Заклет преводач с гръцки език с над 17 години опит. Устни и писмени преводи, преводи на документи, легализация, имотни сделки в Гърция.",
-  "address": {
-    "@type": "PostalAddress",
-    "addressLocality": "Пловдив",
-    "addressCountry": "България"
-  },
-  "contactPoint": {
-    "@type": "ContactPoint",
-    "telephone": "+359897098959",
-    "contactType": "Customer Service",
-    "areaServed": "BG, GR",
-    "availableLanguage": ["Bulgarian", "Greek"]
-  }
-}
-</script></head>
+
+<meta content="Заклет преводач с гръцки език, устни и писмени преводи, имоти в Гърция, легализация, консултации при покупка на имот." name="description"/><meta content="заклет преводач гръцки език, устни преводи гръцки, писмени преводи, имоти в Гърция, покупко-продажба на имоти, легализация, Ακίνητα στην Ελλάδα, μεταφράσεις ελληνικά, заверки на документи, апостил, апостил на документи, устни и писмени преводи с гръцки език, легализация на документи" name="keywords"/><meta content="Пламен Моллов" name="author"/><link href="https://www.prevodigr.eu" rel="canonical"/></head>
 <body>
 <header>
 <img alt="Plamen Mollov Logo" src="assets/images/logo.webp"/>
@@ -400,7 +370,7 @@ button:hover::after {
 <p style="font-size: 1.1rem; color: #222;">💬 Безплатна, бърза и напълно онлайн консултация / Δωρεάν, γρήγορη και πλήρως διαδικτυακή συμβουλευτική</p>
 </div>
 <!-- Формата -->
-<iframe height="750" id="offerForm" src="https://forms.fillout.com/t/9NUe5T1CmCus" style="border:none;" title="Форма за оферта" width="100%">
+<iframe height="750" id="offerForm" loading="lazy" src="https://forms.fillout.com/t/9NUe5T1CmCus" style="border:none;" title="Форма за оферта" width="100%">
 </iframe>
 <div style="margin-top: 1rem; font-size: 0.9rem; text-align: center;">
       🔒 <a href="https://prevodigr.eu/privacy.html" style="color:#003366; text-decoration: underline;" target="_blank">
@@ -474,7 +444,7 @@ button:hover::after {
   }
 }
 </style>
-<iframe height="600" id="feedbackForm" src="https://forms.fillout.com/t/89sjbQ6ZJ1us" style="border:none;" title="Форма за мнение" width="100%">
+<iframe height="600" id="feedbackForm" loading="lazy" src="https://forms.fillout.com/t/89sjbQ6ZJ1us" style="border:none;" title="Форма за мнение" width="100%">
 </iframe>
 <div style="margin-top: 1rem; font-size: 0.9rem; text-align: center;">
   🔒 <a href="https://prevodigr.eu/privacy.html" style="color:#003366; text-decoration: underline;" target="_blank">
@@ -521,5 +491,35 @@ window.addEventListener("message", function(event) {
   }
 });
 </script>
-</body>
+<script>
+  document.addEventListener("DOMContentLoaded", function() {
+    const nav = document.querySelector("nav");
+    const toggle = document.querySelector(".menu-toggle");
+    toggle.addEventListener("click", () => {
+      nav.classList.toggle("active");
+    });
+  });
+</script><script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "ProfessionalService",
+  "name": "Пламен Моллов – Заклет преводач от и на гръцки език",
+  "url": "https://www.prevodigr.eu",
+  "logo": "https://www.prevodigr.eu/assets/images/logo.webp",
+  "image": "https://www.prevodigr.eu/assets/images/bg-greece.webp",
+  "description": "Заклет преводач с гръцки език с над 17 години опит. Устни и писмени преводи, преводи на документи, легализация, имотни сделки в Гърция.",
+  "address": {
+    "@type": "PostalAddress",
+    "addressLocality": "Пловдив",
+    "addressCountry": "България"
+  },
+  "contactPoint": {
+    "@type": "ContactPoint",
+    "telephone": "+359897098959",
+    "contactType": "Customer Service",
+    "areaServed": "BG, GR",
+    "availableLanguage": ["Bulgarian", "Greek"]
+  }
+}
+</script></body>
 </html>
