--- a/index.html
+++ b/index.html
@@ -3,29 +3,10 @@
 
 <html lang="bg">
 <head>
-
-<style>
-@font-face {
-  font-family: 'Poppins';
-  font-style: normal;
-  font-weight: 500;
-  font-display: swap;
-  src: url('https://fonts.gstatic.com/s/poppins/v20/pxiByp8kv8JHgFVrLFj_V1tvFP-KUEg.woff2') format('woff2');
-  unicode-range: U+0000-00FF, U+0400-04FF;
-}
-@font-face {
-  font-family: 'Poppins';
-  font-style: normal;
-  font-weight: 600;
-  font-display: swap;
-  src: url('https://fonts.gstatic.com/s/poppins/v20/pxiByp8kv8JHgFVrLEj6Z1tvFP-KUEg.woff2') format('woff2');
-  unicode-range: U+0000-00FF, U+0400-04FF;
-}
-</style>
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
 <title>Plamen Mollov – Преводи от и на гръцки език</title>
-
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;600&amp;display=swap" rel="stylesheet"/>
 <style>
     
 /* GDPR checkbox styling */
@@ -272,10 +253,11 @@ button:hover::after {
 }
 
 </style>
+
 <meta content="Заклет преводач с гръцки език, устни и писмени преводи, имоти в Гърция, легализация, консултации при покупка на имот." name="description"/><meta content="заклет преводач гръцки език, устни преводи гръцки, писмени преводи, имоти в Гърция, покупко-продажба на имоти, легализация, Ακίνητα στην Ελλάδα, μεταφράσεις ελληνικά, заверки на документи, апостил, апостил на документи, устни и писмени преводи с гръцки език, легализация на документи" name="keywords"/><meta content="Пламен Моллов" name="author"/><link href="https://www.prevodigr.eu" rel="canonical"/></head>
 <body>
 <header>
-<img alt="Plamen Mollov Logo" loading="lazy" src="assets/images/logo.webp"/>
+<img alt="Plamen Mollov Logo" src="assets/images/logo.webp"/>
 <h1>Заклет преводач от и на гръцки език – Пламен Моллов</h1>
 <h2><strong>17 години опит в устни и писмени преводи, заверки, легализации и консултации</strong></h2>
 </header>
@@ -497,7 +479,7 @@ button:hover::after {
 <p>© 2025 Пламен Моллов – Заклет преводач с гръцки език</p>
 <p>🇧🇬 България | Ελλάδα 🇬🇷</p>
 </footer>
-<script defer="defer">
+<script>
   document.addEventListener("DOMContentLoaded", function() {
     const forms = document.querySelectorAll("form");
     forms.forEach(function(form) {
@@ -516,7 +498,7 @@ button:hover::after {
     });
   });
 </script>
-<script defer="defer">
+<script>
 window.addEventListener("message", function(event) {
   if (event.origin.includes("fillout.com")) {
     if (event.data?.type === "submissionComplete") {
@@ -525,7 +507,7 @@ window.addEventListener("message", function(event) {
   }
 });
 </script>
-<script defer="defer">
+<script>
   document.addEventListener("DOMContentLoaded", function() {
     const nav = document.querySelector("nav");
     const toggle = document.querySelector(".menu-toggle");
@@ -533,7 +515,7 @@ window.addEventListener("message", function(event) {
       nav.classList.toggle("active");
     });
   });
-</script><script defer="defer" type="application/ld+json">
+</script><script type="application/ld+json">
 {
   "@context": "https://schema.org",
   "@type": "ProfessionalService",
