--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
 <title>Plamen Mollov – Преводи от и на гръцки език</title>
-<link as="style" css2?family='Poppins:wght@500;600&amp;display=swap"' fonts.googleapis.com="" href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;600&amp;display=swap" https:="" onload="this.onload=null;this.rel='stylesheet'&gt;
-&lt;noscript&gt;&lt;link href=" rel="stylesheet"/>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;600&amp;display=swap" rel="stylesheet"/>
 <style>
     
 /* GDPR checkbox styling */
@@ -203,20 +202,23 @@ button:hover::after {
 
 @media (max-width: 768px) {
   header img {
-    height: 160px;
+    height: 160px !important;
     aspect-ratio: 1 / 1;
     object-fit: contain;
   }
 }
 
-.nav-links {
-  max-height: 0;
-  overflow: hidden;
-  transition: max-height 0.5s ease-out;
+@media (max-width: 768px) {
+  .nav-links {
+    max-height: 0;
+    overflow: hidden;
+    transition: max-height 0.5s ease-out;
+  }
+  nav.active .nav-links {
+    max-height: 500px;
+  }
 }
-nav.active .nav-links {
-  max-height: 500px;
-}</style>
+</style>
 <style>
   .menu-toggle {
     display: none;
@@ -240,12 +242,6 @@ nav.active .nav-links {
       flex-direction: column;
       width: 100%;
       background-color: #0055a5;
-      overflow: hidden;
-      max-height: 0;
-      transition: max-height 0.5s ease-out;
-      flex-direction: column;
-      width: 100%;
-      background-color: #0055a5;
     }
     .nav-links a {
       padding: 1rem;
@@ -257,7 +253,6 @@ nav.active .nav-links {
     }
     nav.active .nav-links {
       display: flex;
-      max-height: 500px;
     }
   }
 
@@ -280,7 +275,7 @@ nav.active .nav-links {
 <meta content="Заклет преводач с гръцки език, устни и писмени преводи, имоти в Гърция, легализация, консултации при покупка на имот." name="description"/><meta content="заклет преводач гръцки език, устни преводи гръцки, писмени преводи, имоти в Гърция, покупко-продажба на имоти, легализация, Ακίνητα στην Ελλάδα, μεταφράσεις ελληνικά, заверки на документи, апостил, апостил на документи, устни и писмени преводи с гръцки език, легализация на документи" name="keywords"/><meta content="Пламен Моллов" name="author"/><link href="https://www.prevodigr.eu" rel="canonical"/></head>
 <body>
 <header>
-<img alt="Plamen Mollov Logo" height="220" loading="lazy" src="assets/images/logo.webp" width="220"/>
+<img alt="Plamen Mollov Logo" src="assets/images/logo.webp"/>
 <h1>Заклет преводач от и на гръцки език – Пламен Моллов</h1>
 <h2><strong>17 години опит в устни и писмени преводи, заверки, легализации и консултации</strong></h2>
 </header>
