--- a/index.html
+++ b/index.html
@@ -44,7 +44,6 @@ body {
     header h1, header h2 {
       margin-top: -0.8rem;
     }
-    header img {
       height: 220px;
     }
     nav {
@@ -189,7 +188,6 @@ button:hover::after {
 
 /* Responsive adjustments for mobile */
 @media (max-width: 768px) {
-  header img {
     height: 120px;
   }
   header h1 {
@@ -197,6 +195,14 @@ button:hover::after {
   }
   header h2 {
     font-size: 1rem;
+  }
+}
+
+@media (max-width: 768px) {
+  header img {
+    height: 220px !important;
+    aspect-ratio: auto;
+    object-fit: contain;
   }
 }
 </style>
@@ -253,7 +259,6 @@ button:hover::after {
 }
 
 </style>
-
 <meta content="Заклет преводач с гръцки език, устни и писмени преводи, имоти в Гърция, легализация, консултации при покупка на имот." name="description"/><meta content="заклет преводач гръцки език, устни преводи гръцки, писмени преводи, имоти в Гърция, покупко-продажба на имоти, легализация, Ακίνητα στην Ελλάδα, μεταφράσεις ελληνικά, заверки на документи, апостил, апостил на документи, устни и писмени преводи с гръцки език, легализация на документи" name="keywords"/><meta content="Пламен Моллов" name="author"/><link href="https://www.prevodigr.eu" rel="canonical"/></head>
 <body>
 <header>
