--- a/index.html
+++ b/index.html
@@ -443,6 +443,10 @@ button:hover::after {
       “Είμαι πολύ ικανοποιημένος από τις υπηρεσίες του κ. Πλάμεν Μόλλοβ.”
       <strong>Παρασκευαΐδης Χρήστος</strong>
 </div>
+<div class="testimonial">
+      “Коректни преводачески услуги, щадящи времето на клиента, на достъпни цени. С удоволствие бих ползвал отново!” 
+      <strong>Пламен Чингаров</strong>
+</div>
 <div style="margin-top: 2rem;">
 <div style="
         background: linear-gradient(135deg, #e6f2ff, #ffffff);
