--- a/index.html
+++ b/index.html
@@ -3,6 +3,16 @@
 
 <html lang="bg">
 <head>
+
+<!-- Favicon икони за всички устройства -->
+<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+<link rel="manifest" href="/site.webmanifest">
+<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#003366">
+<meta name="msapplication-TileColor" content="#003366">
+<meta name="theme-color" content="#ffffff">
+
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
 <title>Plamen Mollov – Преводи от и на гръцки език</title>
